# V-Mail

./: .eslintrc.json  .gitguardian.yaml  .gitignore  .prettierignore  .prettierrc.json  .snyk  ANALYSIS.md  AUDIT_CERTIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  OPERATIONS.md  PLAN_v1.6.0.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v1.5.0.md  REPOSITORY_AUDIT_REPORT.md  ROADMAP.md  SECURITY.md  codecov.yml  index.html  package-lock.json  package.json  pr_body.md  pr_calendar_description.md  renovate.json  sonar-project.properties  team_accounts_pr_body.md  todo.md  tsconfig.json  vite.config.ts  vitest.config.js  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
backend/src/: main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/config/: mod.rs
backend/src/crypto/: hybrid.rs  key_derivation.rs  key_exchange.rs  mod.rs  symmetric.rs
backend/src/handlers/: aliases.rs  auth.rs  emails.rs  folders.rs  health.rs  mod.rs
backend/src/middleware/: logging.rs  mod.rs  rate_limit.rs
backend/src/models/: alias.rs  attachment.rs  email.rs  folder.rs  mod.rs  user.rs
backend/src/services/: alias.rs  auth.rs  database.rs  email.rs  mod.rs  storage.rs  websocket.rs
backend/src/utils/: error.rs
css/: style.css
desktop-app/: package-lock.json  package.json
docs/: PLANNING_v1.3.0.md  PLANNING_v1.4.0.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md
js/: app.js  app.ts  (+1 more)
(+248 files in other folders)
