[package]
name = "vantis-mail-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.12"

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Email parsing
mail-parser = "0.9"

# File storage
bytes = "1.5"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3.32"

[dev-dependencies]
# Testing
actix-rt = "2.9"
